# dm-vertity-tpm

./: .gitignore  CMakeLists.txt  README.md
service/: .gitignore  CMakeLists.txt  dm-verity-agent.service.in
src/: .gitignore  CMakeLists.txt  dm-verity-agent.cc
